force-app/main/default/objects/Address__c/fields/accountHasParentAccount__c.field-meta.xml
<CustomField>
    <fullName>accountHasParentAccount__c</fullName>
    <formula>IF(ISBLANK(Customer__r.Parent_Customer__c) =  true,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>accountHasParentAccount</label>
    <type>Checkbox</type>
</CustomField>