force-app/main/default/objects/Address__c/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Shipping Address</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Billing Address</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>