force-app/main/default/objects/Address__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <label>Block</label>
    <length>100</length>
    <type>Text</type>
</CustomField>