force-app/main/default/objects/Address__c/fields/GST_No__c.field-meta.xml
<CustomField>
    <fullName>GST_No__c</fullName>
    <label>GST No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>