force-app/main/default/objects/Address__c/fields/GST_Type__c.field-meta.xml
<CustomField>
    <fullName>GST_Type__c</fullName>
    <label>GST Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SGST</fullName>
            </value>
            <value>
                <fullName>CGST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>