force-app/main/default/objects/Address__c/fields/GST_Validator_Response__c.field-meta.xml
<CustomField>
    <fullName>GST_Validator_Response__c</fullName>
    <label>GST Validator Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>