force-app/main/default/objects/Address__c/fields/GST_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>GST_Verification_Status__c</fullName>
    <label>GST Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
                <label>Valid</label>
            </value>
            <value>
                <fullName>false</fullName>
                <label>Invalid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>