force-app/main/default/objects/Address__c/fields/RowNum__c.field-meta.xml
<CustomField>
    <fullName>RowNum__c</fullName>
    <label>RowNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>