force-app/main/default/objects/Address__c/fields/Same_as_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Same_as_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same as Billing Address</label>
    <type>Checkbox</type>
</CustomField>