force-app/main/default/objects/Address__c/fields/Street_No__c.field-meta.xml
<CustomField>
    <fullName>Street_No__c</fullName>
    <label>Street No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>