force-app/main/default/objects/Address__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <label>ZipCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>