force-app/main/default/objects/Address__c/validationRules/Address_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>OR( NOT( Same_as_Billing_Address__c == false),ISPICKVAL( Country__c , &quot;&quot;) , ISPICKVAL( State__c , &quot;&quot;) , ISPICKVAL( District__c , &quot;&quot;) , ISBLANK( Address__c ))</errorConditionFormula>
    <errorMessage>Please enter the Mandatory Fields (Address, Country, State, District, GST Number)</errorMessage>
</ValidationRule>