force-app/main/default/objects/Address__c/validationRules/GST_applicable_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>GST_applicable_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(GST_No__c ), Customer__r.GST_applicable__c  = true)</errorConditionFormula>
    <errorDisplayField>GST_No__c</errorDisplayField>
    <errorMessage>GST field is required when GST Applicable is added in the customer.</errorMessage>
</ValidationRule>